--- a/S04/src/02.Dal/ME.S04.Dal.EF/ME.S04.Dal.EF.csproj
+++ b/S04/src/02.Dal/ME.S04.Dal.EF/ME.S04.Dal.EF.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\01.Core\ME.S04.Core.Contract\ME.S04.Core.Contract.csproj" />
     <ProjectReference Include="..\..\01.Core\ME.S04.Core.DomainModel\ME.S04.Core.DomainModel.csproj" />
+    <ProjectReference Include="..\..\Command\ME.S04.Command.Tools\ME.S04.Command.Tools.csproj" />
   </ItemGroup>
 
 </Project>
