--- a/S10/src/Session10.Consumer.WebMVC/Properties/launchSettings.json
+++ b/S10/src/Session10.Consumer.WebMVC/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:55542",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:4248",
+      "sslPort": 44385
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Session10.HelloWorld": {
+    "Session10.Consumer.WebMVC": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
